# Discord-Bot-Cpp-CMake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/: CMakeLists.txt
src/: main.cpp
src/commands/: command_handler.cpp  commands.h  emoji.cpp  ping.cpp
