set(DPP_CORO ON)
set(DPP_NO_VCPKG ON)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/DPP)

if(WIN32 AND NOT MINGW)
	if (NOT WINDOWS_32_BIT)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/bin/zlib1.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/bin/libcrypto-1_1-x64.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/bin/libssl-1_1-x64.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/bin/libsodium.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/bin/opus.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
	else()
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/32/bin/zlib1.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/32/bin/libcrypto-1_1.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/32/bin/libssl-1_1.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/32/bin/libsodium.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
		configure_file("${CMAKE_CURRENT_LIST_DIR}/DPP/win32/32/bin/opus.dll" "${CMAKE_BINARY_DIR}" COPYONLY)
	endif()
endif()